# pp

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddTarget.cmake
mpi/2_sum/: CMakeLists.txt  main.cc
mpi/3_round_send/: CMakeLists.txt
mpi/4_exp/: CMakeLists.txt  v1.cc  v2.cc  v5.cc
mpi/5_comm/: main.cc
mpi/6_client_server/: CMakeLists.txt  server.cc
mpi/7_one_sided/: CMakeLists.txt  main.cc
mpi/8_file_system/: main.cc
mpi/9_sort/: main.cc  stat.ipynb
mpi/lab1/: CMakeLists.txt  proc.ipynb  stat.ipynb
sem5/1_hello_world/: CMakeLists.txt
sem5/4_exp/: CMakeLists.txt
sem5/8_file_system/: CMakeLists.txt
sem5/9_sort/: CMakeLists.txt
sem6/: CMakeLists.txt
sem6/10_hello_world/: CMakeLists.txt
sem6/11_sum/: CMakeLists.txt
sem6/12_round_send/: CMakeLists.txt  main.cc
sem6/5_comm/: CMakeLists.txt
sem6/MPI/lab1/: stat.ipynb
sem6/lab2/: stat.ipynb
sem6/threads/1_hello_world/: CMakeLists.txt  main.cc
sem6/threads/2_sum/: CMakeLists.txt  main.cc
sem6/threads/3_round_send/: CMakeLists.txt
sem6/threads/lab2/: main.cc
sem7/: CMakeLists.txt
sem7/MPI/lab1/: CMakeLists.txt  res.ipynb  t1.cc  t3.cc
sem7/OpenMP/: CMakeLists.txt
sem7/OpenMP/1_hello_world/: CMakeLists.txt  main.cc
sem7/OpenMP/2_sum/: CMakeLists.txt  main.cc
sem7/OpenMP/3_sequential/: CMakeLists.txt  main.cc
sem7/OpenMP/4_nested/: CMakeLists.txt  main.cc
sem7/OpenMP/5_copy/: CMakeLists.txt  main.cc
sem7/OpenMP/6_balance/: CMakeLists.txt  main.cc
sem7/OpenMP/7_matmul/: CMakeLists.txt  gen.py  main.cc  matmul.hh  matrix.hh  timer.hh
sem7/OpenMP/lab1/: t2.cc  (+1 more)
